## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)."\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
	$(IMEDIA_RTSP_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g


conf_datadir = $(prefix)/imedia_rtsp/config
conf_data_DATA = \
	app.yml
